# exquisitor

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  c4model.dsl  main.py  pyproject.toml  requirements.txt  setup.py
article/: SConstruct  bibliography.bib  cover.tex  main.tex  requirements.txt
article/submission/: 250523-1611-arvin.austria.txt  250526-1033-arvin.austria.txt
docs/: databases.md  dev.md  index.md  wiki.md
docs/grouping_algorithms/: cd-hit.md  dnaclust.md  index.md  mothur.md
exquisitor/: Cargo.toml  README.md  README.pl.md
exquisitor/api/: event.py
exquisitor/examples/: rotavirus.fasta  rotavirus_duplicate.fasta  rotavirus_multi.fasta  simple.fasta
exquisitor/experiments/: evaluator.py  experiment.py  runner.py
exquisitor/experiments/monitor/: cpu_monitor.py  memory_monitor.py  monitor.py  resource_monitor.py
exquisitor/experiments/quality/: global_quality_evaluator.py
exquisitor/exquisitor-app/: Cargo.toml
exquisitor/exquisitor-app/migrations/: 0001_create_table.sql  0002_create_results_table.sql
exquisitor/exquisitor-app/src/: db.rs  executor.rs  main.rs  templates.rs
exquisitor/exquisitor-app/src/routes/: errors.rs  experiment.rs  index.rs  mod.rs  order.rs  search.rs
exquisitor/exquisitor-app/static/: base.css  index.css  order.css
exquisitor/exquisitor-app/templates/: base.html  code.html  error.html  index.html  order.html  order_add.html  search.html
exquisitor/exquisitor-cli/: Cargo.toml
exquisitor/exquisitor-cli/src/: main.rs
exquisitor/exquisitor-cli/src/commands/: clusters.rs  compare.rs  experiment.rs  mod.rs  run.rs  search.rs
exquisitor/exquisitor-core/: Cargo.toml
exquisitor/exquisitor-core/data/: convert.py  training.csv  validation.csv
exquisitor/exquisitor-core/src/: generate_data.rs  lib.rs  main.rs  result.rs  train_model.rs
exquisitor/exquisitor-core/src/clustering/: alphabet.rs  cluster.rs  dissimilarity.rs  distance.rs  embedding.rs  mod.rs  neural.rs  traits.rs
exquisitor/exquisitor-core/src/io/: mod.rs  record.rs  sequence.rs  traits.rs
exquisitor/exquisitor-core/src/io/fasta/: reader.rs  record.rs  writer.rs
exquisitor/exquisitor-core/src/io/fastq/: mod.rs  reader.rs  record.rs  writer.rs
exquisitor/exquisitor-core/src/neural/: data.rs  loss.rs  mod.rs  model.rs  training.rs
exquisitor/exquisitor-core/src/searching/: blast.rs  engine_old.rs  mod.rs  organism.rs  quality.rs  traits.rs
exquisitor/exquisitor-core/tests/: test_sequences.rs
exquisitor/misc/: worker.py  worker2.py
exquisitor/scripts/: download_database.sh  experiment_default_search.sh  experiment_kmer.sh  experiment_needleman_wunsch.sh  experiment_neural.sh  extract_dataset.sh  plot_experiments.py
exquisitor/src/: lib.rs  main.rs
exquisitor/src/clustering/: cluster.rs  distance.rs  errors.rs  mod.rs  traits.rs
exquisitor/static/: base.css
exquisitor/templates/: search.html
exquisitor/tests/: test_sequences.rs
exquisitor/utils/: event.py
exquisitorpy/experiments/: evaluator.py  experiment.py  runner.py
exquisitorpy/misc/: worker.py
migrations/: 0001_create_table.sql
notebooks/: 3.0.0-pfg-use-nucleotide-database.ipynb  3.1.0-pfg-needleman-wunsch-experiments.ipynb  4.0-pfg-dna-clust-simple_testing.ipynb  4.0.0-pfg-dna-clust-simple_testing.ipynb  4.0.1-pfg-mothur-simple-testing.ipynb  4.0.2-pfg-cd-hit-simple_testing.ipynb  4.1.0-pfg-biopython-cluster-basic_experiments.ipynb  5.0.0-pfg-redis.ipynb
notebooks/5.0.0-pfg-redis/: celery_min.py  celery_min_producer.py
notebooks/6.0.0-pfg-pipeline/: pipeline.py  setup.md  temp.fasta  temp2.fasta
notebooks/grouping-algorithms/: .gitignore
notebooks/needleman-wunsch/: blosum50.csv
reports/pipeline/: pipeline.md
src/: lib.rs  main.rs
src/clustering/: cluster.rs  distance.rs  errors.rs  mod.rs  traits.rs
src/io/: mod.rs  reader.rs  sequence.rs  traits.rs
src/searching/: blast.rs  engine.rs  mod.rs  organism.rs  quality.rs  traits.rs
src/server/: db.rs  errors.rs  index.rs  mod.rs  templates.rs
static/: base.css  index.css  main.css
templates/: error.html  experiment.html  index.html
tests/: test_sequences.rs
thesis/: bibliography.bib  main.tex
thesis/tex/: abstract-eng.tex  abstract-pl.tex  bibliography.tex
(+67 files in other folders)
