[package]
name = "exquisitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.10.0"
tempfile = "3"
axum = "0.7.7"
tokio = { version = "1.40", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
askama = "0.12.1"