[package]
name = "exquisitor-app"
version = "0.1.0"
authors = ["Patryk Filip Gryz"]
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
axum = { version = "0.7.7", features = ["multipart"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
askama = "0.12.1"
serde = { version = "1.0.214", features = ["derive"] }
tempfile = "3"