[package]
name = "exquisitor-cli"
version = "0.1.0"
authors = ["Patryk Filip Gryz"]
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
exquisitor-core = { path = "../exquisitor-core" }
tracing = "0.1"
tracing-subscriber = "0.3.18"
burn = { version = "0.15.0", features = ["wgpu"] }
sysinfo = "0.32.1"
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"