[package]
name = "exquisitor-core"
version = "0.1.0"
authors = ["Patryk Filip Gryz"]
edition = "2021"
license = "MIT"

[dependencies]
num-traits = "0.2.19"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = { version = "0.18.0" }

[dev-dependencies]
float-cmp = "0.10.0"