[package]
name = "exquisitor-core"
version = "0.1.0"
authors = ["Patryk Filip Gryz"]
edition = "2021"
license = "MIT"

[dependencies]
num-traits = "0.2.19"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kmedoids = "0.5.2"
rand = "0.8.5"
burn = { version = "0.15.0", features = ["wgpu", "dataset", "train"] }
csv = "1.3.1"

[dev-dependencies]
float-cmp = "0.10.0"
